--- a/templates/base.html
+++ b/templates/base.html
@@ -199,6 +199,13 @@
                 >CATÁLOGO</a
               >
             </li>
+           <li>
+              <a
+                href="{% url 'contacto' %}"
+                class="text-white text-xs uppercase hover:text-red-accent transition-colors duration-300"
+                >CONTACTO</a
+              >
+            </li>
 
             <li>
               <a
@@ -251,6 +258,13 @@
                 >CATÁLOGO</a
               >
             </li>
+            <li>
+              <a
+                href="{% url 'contacto' %}"
+                class="text-white text-xs uppercase hover:text-red-accent transition-colors duration-300"
+                >CONTACTO</a
+              >
+            </li>
 
             <li>
               <a
@@ -279,6 +293,7 @@
                 ADMINISTRACIÓN
               </a>
             </li>
+            
           </ul>
         </nav>
       </div>
