--- a/templates/base.html
+++ b/templates/base.html
@@ -261,7 +261,7 @@
             <li>
               <a
                 href="{% url 'contacto' %}"
-                class="text-white text-xs uppercase hover:text-red-accent transition-colors duration-300"
+                class="text-white text-lg uppercase hover:text-red-accent transition-colors duration-300"
                 >CONTACTO</a
               >
             </li>
