--- a/templates/productos/detalles.html
+++ b/templates/productos/detalles.html
@@ -1,5 +1,8 @@
-{% extends 'base.html' %} {% load static %} {% load custom_filters %} {% block
-title %}{{producto.nombre}} - MotoLuxe{% endblock %} {% block content %}
+{% extends 'base.html' %} 
+{% load static %} 
+{% load custom_filters %} 
+{% block title %}{{producto.nombre}} - MotoLuxe{% endblock %} 
+{% block content %}
 
 <!-- Breadcrumb -->
 <nav class="text-sm mb-8">
